--- a/series/index.html
+++ b/series/index.html
@@ -15,17 +15,17 @@ Pure theme for Hugo</title>
 <meta http-equiv=window-target content="_top">
 <meta name=generator content="Hugo 0.92.0 with theme pure">
 <title>Pure theme for Hugo</title>
-<link rel=alternate type=application/rss+xml href=https://example.com/index.xml title="Pure theme for Hugo">
+<link rel=alternate type=application/rss+xml href=https://example.com/series/index.xml title="Pure theme for Hugo">
 <link rel=stylesheet href=https://example.com/css/style.min.e64d754037c0ee0ec4e20ab1d6f07740ace61729bc03850559b8caa21ae4a597.css>
 <link rel=stylesheet href=https://cdn.staticfile.org/highlight.js/9.15.10/styles/github.min.css async>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.4.2/tocbot.css async>
-<meta property="og:title" content="Pure theme for Hugo">
+<meta property="og:title" content="Series">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://example.com/">
-<meta itemprop=name content="Pure theme for Hugo">
+<meta property="og:url" content="https://example.com/series/">
+<meta itemprop=name content="Series">
 <meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Pure theme for Hugo">
+<meta name=twitter:title content="Series">
 <meta name=twitter:description content><!--[if lte IE 9]><script src=https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js></script><![endif]--><!--[if lt IE 9]><script src=https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js></script>
 <script src=https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js></script><![endif]-->
 </head>
@@ -138,17 +138,15 @@ Pure theme for Hugo</title>
 </div>
 </aside>
 <main class=main role=main>
-<div class="content article-list">
+<article class="content article article-archives article-type-list" itemscope>
+<header class=article-header>
+<h1 itemprop=title>Series</h1>
+<p class=text-muted>Total 0 articles</p>
+</header>
+<div class=article-body>
+</div></div></div></section>
 </div>
-<nav class="bar bar-footer clearfix" data-stick-bottom>
-<div class=bar-inner>
-<ul class="pager pull-left">
-</ul>
-<div class="total-article bar-right">
-Page:1/0
-</div>
-</div>
-</nav>
+</article>
 </main><footer class=footer itemscope itemtype=http://schema.org/WPFooter>
 <ul class=social-links>
 <li><a href=https://github.com/xiaoheiAh target=_blank title=github data-toggle=tooltip data-placement=top>
