--- a/series/index.html
+++ b/series/index.html
@@ -15,14 +15,14 @@ Pure theme for Hugo</title>
 <meta http-equiv=window-target content="_top">
 <meta name=generator content="Hugo 0.92.0 with theme pure">
 <title>Pure theme for Hugo</title>
-<link rel=alternate type=application/rss+xml href=https://example.com/series/index.xml title="Pure theme for Hugo">
-<link rel=stylesheet href=https://example.com/css/style.min.e64d754037c0ee0ec4e20ab1d6f07740ace61729bc03850559b8caa21ae4a597.css>
+<link rel=alternate type=application/rss+xml href=https://fearlessfe.github.io/blog/series/index.xml title="Pure theme for Hugo">
+<link rel=stylesheet href=https://fearlessfe.github.io/blog/css/style.min.e64d754037c0ee0ec4e20ab1d6f07740ace61729bc03850559b8caa21ae4a597.css>
 <link rel=stylesheet href=https://cdn.staticfile.org/highlight.js/9.15.10/styles/github.min.css async>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.4.2/tocbot.css async>
 <meta property="og:title" content="Series">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://example.com/series/">
+<meta property="og:url" content="https://fearlessfe.github.io/blog/series/">
 <meta itemprop=name content="Series">
 <meta itemprop=description content><meta name=twitter:card content="summary">
 <meta name=twitter:title content="Series">
@@ -34,7 +34,7 @@ Pure theme for Hugo</title>
 <div class=navbar-header>
 <div class="profile-block text-center">
 <a id=avatar href=https://github.com/xiaoheiAh target=_blank>
-<img class="img-circle img-rotate" src=https://example.com/avatar.png width=200 height=200>
+<img class="img-circle img-rotate" src=https://fearlessfe.github.io/blog/avatar.png width=200 height=200>
 </a>
 <h2 id=name class="hidden-xs hidden-sm">xiaoheiAh</h2>
 <h3 id=title class="hidden-xs hidden-sm hidden-md">author title</h3>
@@ -71,31 +71,31 @@ Pure theme for Hugo</title>
 <nav id=main-navbar class="collapse navbar-collapse" itemscope itemtype=http://schema.org/SiteNavigationElement role=navigation>
 <ul class="nav navbar-nav main-nav">
 <li class="menu-item menu-item-home">
-<a href=/>
+<a href=/blog/>
 <i class="icon icon-home-fill"></i>
 <span class=menu-title>Home</span>
 </a>
 </li>
 <li class="menu-item menu-item-archives">
-<a href=/posts/>
+<a href=/blog/posts/>
 <i class="icon icon-archives-fill"></i>
 <span class=menu-title>Archives</span>
 </a>
 </li>
 <li class="menu-item menu-item-categories">
-<a href=/categories/>
+<a href=/blog/categories/>
 <i class="icon icon-folder"></i>
 <span class=menu-title>Categories</span>
 </a>
 </li>
 <li class="menu-item menu-item-tags">
-<a href=/tags/>
+<a href=/blog/tags/>
 <i class="icon icon-tags"></i>
 <span class=menu-title>Tags</span>
 </a>
 </li>
 <li class="menu-item menu-item-about">
-<a href=/about/>
+<a href=/blog/about/>
 <i class="icon icon-cup-fill"></i>
 <span class=menu-title>About</span>
 </a>
@@ -151,7 +151,7 @@ Pure theme for Hugo</title>
 <ul class=social-links>
 <li><a href=https://github.com/xiaoheiAh target=_blank title=github data-toggle=tooltip data-placement=top>
 <i class="icon icon-github"></i></a></li>
-<li><a href=https://example.com/index.xml target=_blank title=rss data-toggle=tooltip data-placement=top>
+<li><a href=https://fearlessfe.github.io/index.xml target=_blank title=rss data-toggle=tooltip data-placement=top>
 <i class="icon icon-rss"></i></a></li>
 </ul>
 <div class=copyright>
@@ -176,10 +176,10 @@ Theme by <a href=https://github.com/xiaoheiAh target=_blank> xiaoheiAh </a>base 
 <script type=text/javascript src=https://cdn.staticfile.org/highlight.js/9.15.10/highlight.min.js></script>
 <script type=text/javascript src=https://cdn.staticfile.org/highlight.js/9.15.10/languages/python.min.js defer></script>
 <script type=text/javascript src=https://cdn.staticfile.org/highlight.js/9.15.10/languages/javascript.min.js defer></script><script>hljs.configure({tabReplace:'    ',classPrefix:''}),hljs.initHighlightingOnLoad()</script>
-<script src=https://example.com/js/application.min.a94ab19cb63a95c8d7fbd7b85cab3ddeea8c369bdf75b9cab6708787ead123af.js></script>
-<script src=https://example.com/js/plugin.min.19c5bcb2fb0789ab4f2b7834e5ceb5e92635645605bab902c1024b25f1502364.js></script>
-<script>(function(a){var b={TRANSLATION:{POSTS:'Posts',PAGES:'Pages',CATEGORIES:'Categories',TAGS:'Tags',UNTITLED:'(Untitled)'},ROOT_URL:'https://example.com/',CONTENT_URL:'https://example.com//searchindex.json '};a.INSIGHT_CONFIG=b})(window)</script>
-<script type=text/javascript src=https://example.com/js/insight.min.4a2d52de4bfff73e0c688404fe3d17c9a3ae12d9888e1e1ac9c690e4890de2ded50fe55f2b819c2ba55435a76f396f3ea6805765f0b0af5635cdf74ea459eab0.js defer></script>
+<script src=https://fearlessfe.github.io/blog/js/application.min.a94ab19cb63a95c8d7fbd7b85cab3ddeea8c369bdf75b9cab6708787ead123af.js></script>
+<script src=https://fearlessfe.github.io/blog/js/plugin.min.19c5bcb2fb0789ab4f2b7834e5ceb5e92635645605bab902c1024b25f1502364.js></script>
+<script>(function(a){var b={TRANSLATION:{POSTS:'Posts',PAGES:'Pages',CATEGORIES:'Categories',TAGS:'Tags',UNTITLED:'(Untitled)'},ROOT_URL:'https://fearlessfe.github.io/blog/',CONTENT_URL:'https://fearlessfe.github.io/blog//searchindex.json '};a.INSIGHT_CONFIG=b})(window)</script>
+<script type=text/javascript src=https://fearlessfe.github.io/blog/js/insight.min.4a2d52de4bfff73e0c688404fe3d17c9a3ae12d9888e1e1ac9c690e4890de2ded50fe55f2b819c2ba55435a76f396f3ea6805765f0b0af5635cdf74ea459eab0.js defer></script>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.4.2/tocbot.min.js></script>
 <script>tocbot.init({tocSelector:'.js-toc',contentSelector:'.js-toc-content',headingSelector:'h1, h2, h3',hasInnerContainers:!0})</script>
 </body>
