--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html lang=en>
 <head>
 <title>
-Pure theme for Hugo</title>
+fearlessfe's blog</title>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,minimal-ui">
@@ -14,18 +14,18 @@ Pure theme for Hugo</title>
 <meta name=theme-color content="#000000">
 <meta http-equiv=window-target content="_top">
 <meta name=generator content="Hugo 0.92.0 with theme pure">
-<title>Pure theme for Hugo</title>
-<link rel=alternate type=application/rss+xml href=https://fearlessfe.github.io/blog/index.xml title="Pure theme for Hugo">
+<title>fearlessfe's blog</title>
+<link rel=alternate type=application/rss+xml href=https://fearlessfe.github.io/blog/index.xml title="fearlessfe's blog">
 <link rel=stylesheet href=https://fearlessfe.github.io/blog/css/style.min.e64d754037c0ee0ec4e20ab1d6f07740ace61729bc03850559b8caa21ae4a597.css>
 <link rel=stylesheet href=https://cdn.staticfile.org/highlight.js/9.15.10/styles/github.min.css async>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.4.2/tocbot.css async>
-<meta property="og:title" content="Pure theme for Hugo">
+<meta property="og:title" content="fearlessfe's blog">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://fearlessfe.github.io/blog/">
-<meta itemprop=name content="Pure theme for Hugo">
+<meta itemprop=name content="fearlessfe's blog">
 <meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Pure theme for Hugo">
+<meta name=twitter:title content="fearlessfe's blog">
 <meta name=twitter:description content><!--[if lte IE 9]><script src=https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js></script><![endif]--><!--[if lt IE 9]><script src=https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js></script>
 <script src=https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js></script><![endif]-->
 </head>
@@ -153,7 +153,7 @@ Pure theme for Hugo</title>
 <article class="article article-type-page" itemscope itemtype=http://schema.org/BlogPosting>
 <div class=article-header>
 <h1 itemprop=name>
-<a class=article-date href=/blog/2022/01/mutex/>Golang Mutex 源码解析</a>
+<a class=article-title href=/blog/2022/01/mutex/>Golang Mutex 源码解析</a>
 </h1>
 </div>
 <div class="article-entry text-muted" itemprop=description>
